<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="Date">Today,June 24</string>
    <string name="max_temp">21 度</string>
    <string name="min_temp">8 度</string>
    <string name="weather">Cloudy</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">453800</string>
    <string name="pref_unitsType_label">Temperature Units</string>
    <string name="pref_unitsType_key">Units</string>
    <string name="pref_unitsType_default">metric</string>

    <string name="action_map">Map Location</string>
    <string name="action_refresh" translateable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string-array name="pref_unitsType_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="pref_unitsType_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
</resources>
