<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        >
    </EditTextPreference>

    <ListPreference
        android:title="@string/pref_unitsType_label"
        android:key="@string/pref_unitsType_key"
        android:dialogTitle="@string/pref_unitsType_label"
        android:entries="@array/pref_unitsType_entries"
        android:entryValues="@array/pref_unitsType_values"
        android:defaultValue="@string/pref_unitsType_default"
        >

    </ListPreference>
</PreferenceScreen>
